--- a/index.jade
+++ b/index.jade
@@ -17,7 +17,7 @@ html
 		.big-price
 			span.number 59
 			span.currency &euro;*
-		.you-get-title Ce primeşti??
+		.you-get-title Ce primeşti?
 		.write-us-title
 			span Gratuit
 			|&nbsp;estimare de preţ
